fixing scrollbar (2)

--- a/defaultstring/style_garapan.css
+++ b/defaultstring/style_garapan.css
@@ -344,40 +344,59 @@ img.readingpict {
     overflow-x: hidden;
     overflow-y: auto;
 }
-/* .scroll-container::-webkit-scrollbar { */
-  /* display: none; */
-/* } */
 
+/* WebKit Scrollbar */
+.scroll-container::-webkit-scrollbar {
+    width: 8px; /* lebar scroll bar */
+}
+
+.scroll-container::-webkit-scrollbar-track {
+    background: #f1f1f1; /* warna background track */
+}
+
+.scroll-container::-webkit-scrollbar-thumb {
+    background: #888; /* warna thumb scroll bar */
+    border-radius: 4px; /* border radius thumb */
+}
+
+/* MS Scrollbar (Edge) */
+.scroll-container::-ms-scrollbar {
+    width: 8px; /* lebar scroll bar */
+}
+
+.scroll-container::-ms-scrollbar-track {
+    background: #f1f1f1; /* warna background track */
+}
+
+.scroll-container::-ms-scrollbar-thumb {
+    background: #888; /* warna thumb scroll bar */
+    border-radius: 4px; /* border radius thumb */
+}
+
+/* Hover effect */
+.scroll-container:hover::-webkit-scrollbar-thumb {
+    background: #555; /* warna thumb scroll bar saat dihover */
+}
+
+.scroll-container:hover::-ms-scrollbar-thumb {
+    background: #555; /* warna thumb scroll bar saat dihover */
+}
+
+/* Scrollbar pada kondisi tertentu */
 @media screen and (max-width: 700px) {
-    .contents-flex {
-        flex-direction: column;
+    .scroll-container {
+        overflow-x: scroll;
+        overflow-y: hidden;
     }
-	.scroll-container:hover {
-		overflow-x: scroll;
-		overflow-y: hidden;
-	}
 }
 
 @media screen and (max-width: 1280px) {
-	.contents {
-		display: flex;
-		/* width: 96%; */
-		height: auto;
-		/* overflow: hidden; */
-	}
-	.contents-flex {
-		flex-direction: column;
-	}
-	.scroll-container {
-		margin-left: 0px;
-		padding-top: 0pt;
-		overflow-x: scroll;
-		overflow-y: hidden;
-		min-width: -webkit-fill-available;
-		height: 130pt;
-		flex-direction: column;
-	}
+    .scroll-container {
+        overflow-x: scroll;
+        overflow-y: hidden;
+    }
 }
+
 
 
 .scroll-container::-webkit-scrollbar {
